@@ -1,3 +1,9 @@
+*zenbook-als-0_p20140502 (05 Jun 2014)
+
+  05 Jun 2014; Manuel Rüger <mrueg@gentoo.org> +zenbook-als-0_p20140502.ebuild,
+  -zenbook-als-0_p20140222.ebuild, zenbook-als-9999.ebuild:
+  [app-laptop/zenbook-als] Update snapshot.
+
 *zenbook-als-0_p20140222 (23 Feb 2014)
 
   23 Feb 2014; Manuel Rüger <mrueg@gentoo.org> +files/zenbook-als.initd,
